Add Transaction Ledger link to index.html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                 </div>
                 <div class="arrow">→</div>
             </a>
+            <a href="./ledger/" class="card">
+    <div class="card-info">
+        <strong>Transaction Ledger</strong>
+        <span>nified Wallet Ledger & Multi-party Fund Orchestration</span>
+    </div>
+    <div class="arrow">→</div>
+</a>
 
             <div class="card" style="opacity: 0.4; cursor: not-allowed; border-style: dashed;">
                 <div class="card-info">
