add travel planner & configurator in index.html

--- a/index.html
+++ b/index.html
@@ -61,8 +61,22 @@
             </a>
             <a href="./ledger/" class="card">
     <div class="card-info">
-        <strong>Transaction Ledger</strong>
-        <span>nified Wallet Ledger & Multi-party Fund Orchestration</span>
+        <strong>Home Transaction Ledger</strong>
+        <span>PropTech Wallet Ledger & Multi-party Fund Orchestration</span>
+    </div>
+    <div class="arrow">→</div>
+</a>
+          <a href="./travelplanner/" class="card">
+    <div class="card-info">
+        <strong>Travel Planner</strong>
+        <span>Intent-Aware Travel Engine: Personalized Itinerary & Geospatial Mapping</span>
+    </div>
+    <div class="arrow">→</div>
+</a>
+            <a href="./configurator/" class="card">
+    <div class="card-info">
+        <strong>Luxury Car Configurator</strong>
+        <span>High-Fidelity Vehicle Configurator: Bespoke Luxury Customization Framework</span>
     </div>
     <div class="arrow">→</div>
 </a>
