Update header to remove brackets from name and email

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <div class="header">
         <div class="title-row">
-            <h1>[Fiona Gao]</h1>
-            <a href="mailto:[koala.fiona.gao@gmail.com]" class="email-link">[koala.fiona.gao@gmail.com]</a>
+            <h1>Fiona Gao</h1>
+            <a href="mailto:koala.fiona.gao@gmail.com" class="email-link">koala.fiona.gao@gmail.com</a>
         </div>
         <p>AI Product Manager Portfolio</p>
     </div>
